fix: species between profile/attributes, center align, always show descriptions

--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,3 @@ body {
     transform: translateY(-5px);
   }
 }
-
-.attrBarContainer:hover .attr-tooltip {
-  opacity: 1;
-  visibility: visible;
-}
